--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,21 +12,29 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://user-images.githubusercontent.com/6901805/58038897-167f0280-7ae6-11e9-94eb-88e880a25f0f.gif"); /* Set the background image */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
+      background: black;
+      overflow: hidden;
     }
-    
+
+    /* Background video styling */
+    video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1; /* Place the video behind content */
+    }
+
     .btn {
-      --color: rgb(238,130,238);
+      --color: rgb(238, 130, 238);
       --color2: #0E0E0E;
       width: 200px;
       padding: 0.8em 1.75em;
       background-color: transparent;
       border-radius: 6px;
-      border: .3px solid var(--color);
-      transition: .5s;
+      border: 3px solid transparent;
       position: relative;
       overflow: hidden;
       cursor: pointer;
@@ -38,34 +45,21 @@
       text-transform: uppercase;
       color: var(--color);
       margin-bottom: 24px;
-    }
-
-    .btn::after, .btn::before {
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      transform: skew(90deg) translate(-50%, -50%);
-      position: absolute;
-      inset: 50%;
-      left: 25%;
-      z-index: -1;
-      transition: .5s ease-out;
-      background-color: var(--color);
+      transition: 0.5s;
     }
 
     .btn::before {
-      top: -50%;
-      left: -25%;
-      transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
-    }
-
-    .btn:hover::before {
-      transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
-    }
-
-    .btn:hover::after {
-      transform: skew(45deg) translate(-50%, -50%);
+      content: '';
+      position: absolute;
+      top: -3px;
+      left: -3px;
+      right: -3px;
+      bottom: -3px;
+      background: linear-gradient(45deg, #ff00ff, #00ffff, #ff00ff, #00ffff);
+      background-size: 400%;
+      z-index: -1;
+      border-radius: 6px;
+      animation: neon-border 4s linear infinite;
     }
 
     .btn:hover {
@@ -73,18 +67,28 @@
     }
 
     .btn:active {
-      filter: brightness(.7);
-      transform: scale(.98);
+      filter: brightness(0.7);
+      transform: scale(0.98);
+    }
+
+    @keyframes neon-border {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
   </style>
 </head>
 <body>
+  <!-- Background video -->
+  <video autoplay loop muted>
+    <source src="https://i.imgur.com/DSaX6eG.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
   <button onclick="window.open(`/pair`)" class="btn">Pair</button>
   <button onclick="window.open(`https://github.com/Awais-star-a11y/AWAIS-MD`)" class="btn">Repo</button>
   <button onclick="window.open(`https://github.com/Awais-star-a11y/AWAIS-MD-PLUGINS`)" class="btn">Plugins</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029VashGieHAdNP11OHXH3P`)" class="btn">Channel</button>
-  <button onclick="window.open(`https://www.instagram.com/um4rxd`)" class="btn">instagram</button>
-
+  <button onclick="window.open(`https://www.instagram.com/um4rxd`)" class="btn">Instagram</button>
 </body>
 </html>
