--- a/home.html
+++ b/home.html
@@ -84,11 +84,15 @@
     <source src="https://i.imgur.com/DSaX6eG.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-
+<!-- Background music -->
+  <audio autoplay loop>
+    <source src="your-music-file.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio
   <button onclick="window.open(`/pair`)" class="btn">Pair</button>
-  <button onclick="window.open(`https://github.com/Awais-star-a11y/AWAIS-MD`)" class="btn">Repo</button>
-  <button onclick="window.open(`https://github.com/Awais-star-a11y/AWAIS-MD-PLUGINS`)" class="btn">Plugins</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VashGieHAdNP11OHXH3P`)" class="btn">Channel</button>
-  <button onclick="window.open(`https://www.instagram.com/um4rxd`)" class="btn">Instagram</button>
+  <button onclick="window.open(`https://github.com/betingrich3/Mercedes`)" class="btn">Mercedes</button>
+  <button onclick="window.open(`https://github.com/betingrich/Bugatti`)" class="btn">Bugatti</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029Vajvy2kEwEjwAKP4SI0x`)" class="btn">Channel</button>
+  <button onclick="window.open(`https://wa.me//+254740007567`)" class="btn">Chat Marisel</button>
 </body>
 </html>
