--- a/home.html
+++ b/home.html
@@ -28,12 +28,12 @@
     }
 
     .btn {
-      --color: rgb(238, 130, 238);
+      --color: white;
       --color2: #0E0E0E;
-      width: 200px;
+      width: 260px;
       padding: 0.8em 1.75em;
       background-color: transparent;
-      border-radius: 6px;
+      border-radius: 50px;
       border: 3px solid transparent;
       position: relative;
       overflow: hidden;
@@ -58,12 +58,12 @@
       background: linear-gradient(45deg, #ff00ff, #00ffff, #ff00ff, #00ffff);
       background-size: 400%;
       z-index: -1;
-      border-radius: 6px;
+      border-radius: 50px; /* Ensures rounded corners match the button */
       animation: neon-border 4s linear infinite;
     }
 
     .btn:hover {
-      color: var(--color2);
+      color: black;
     }
 
     .btn:active {
