--- a/pair.html
+++ b/pair.html
@@ -60,27 +60,37 @@
 
     .input-container {
       display: flex;
-      background: white;
+      background: transparent;
       border-radius: 1rem;
-      background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
       padding: 0.3rem;
       gap: 0.3rem;
       width: 90%;
+      position: relative;
     }
 
     .input-container input {
-      border-radius: 0.8rem 0 0 0.8rem;
-      background: #e8e8e8;
+      border-radius: 0.8rem;
+      background: transparent;
       flex-grow: 1;
       padding: 1rem;
-      border: none;
-      color: #5e5e5e;
+      border: 2px solid transparent;
+      color: #fff;
       transition: all 0.2s ease-in-out;
+      animation: neonInput 3s infinite;
     }
 
-    .input-container input:focus {
-      outline: none;
-      background: #d8d8d8;
+    @keyframes neonInput {
+      0% { box-shadow: 0 0 10px #ff00ff; border-color: #ff00ff; }
+      25% { box-shadow: 0 0 10px #00ffff; border-color: #00ffff; }
+      50% { box-shadow: 0 0 10px #ff8000; border-color: #ff8000; }
+      75% { box-shadow: 0 0 10px #8000ff; border-color: #8000ff; }
+      100% { box-shadow: 0 0 10px #ff00ff; border-color: #ff00ff; }
+    }
+
+    .input-container input::placeholder {
+      color: #fff;
+      font-weight: bold;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
     }
 
     .input-container button {
@@ -91,7 +101,7 @@
       text-transform: uppercase;
       color: white;
       border: none;
-      border-radius: 0 1rem 1rem 0;
+      border-radius: 0.8rem;
       transition: all 0.2s ease-in-out;
     }
 
