--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Um4r Session</title>
+  <title>Marisel's Session Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
