--- a/deploy.html
+++ b/deploy.html
@@ -69,9 +69,9 @@
 <body>
   <h1>Deploy Mercedes</h1>
   <p>After getting your session from the session site, press the button below to deploy on Heroku.</p>
-  <a href="https://heroku.com/deploy?template=YOUR_GITHUB_REPO_URL" class="button">Deploy to Heroku</a>
+  <a href="https://heroku.com/deploy?template=https://github.com/betingrich3/Mercedes" class="button">Deploy to Heroku</a>
   <p>Watch tutorials on YouTube:</p>
-  <a href="https://www.youtube.com/YOUR_TUTORIAL_LINK" class="button">YouTube Tutorial</a>
+  <a href="https://youtu.be/L_meuUMf0Hc?si=41sKXrkhlf6MaeEO" class="button">YouTube Tutorial</a>
 
   <h2>Features Of Mercedes</h2>
   <div class="neon-border">
@@ -136,7 +136,7 @@
   </div>
 
   <p>Support the development:</p>
-  <a href="https://buymeacoffee.com/YOUR_PROFILE" class="button">Send via MPesa</a>
+  <a href="https://buymeacoffee.com/254740007567" class="button">Send via MPesa</a>
 
   <footer>
     <p>Marisel Took Time To Make You Happy.</p>
