--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
   </video>
 
   <button onclick="window.open(`/pair`)" class="btn">Pair</button>
-  <button onclick="window.open('./subfolder/deploy.html')" class="btn">Deploy on Heroku</button>
+  <button onclick="window.open('./https://deploy-fld5.vercel.app/')" class="btn">Bot Features</button>
   <button onclick="window.open(`https://github.com/betingrich3/Mercedes/fork`)" class="btn">Mercedes</button>
   <button onclick="window.open(`https://github.com/betingrich/Bugatti/fork`)" class="btn">Bugatti</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029Vajvy2kEwEjwAKP4SI0x`)" class="btn">Support</button>
