--- a/home.html
+++ b/home.html
@@ -16,7 +16,6 @@
       overflow: hidden;
     }
 
-    /* Background video styling */
     video {
       position: fixed;
       top: 0;
@@ -24,62 +23,85 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      z-index: -1; /* Place the video behind content */
+      z-index: -1;
     }
 
     .btn {
       --color: white;
-      --color2: #0E0E0E;
       width: 260px;
-      padding: 0.8em 1.75em;
-      background-color: transparent;
-      border-radius: 50px;
-      border: 3px solid transparent;
+      padding: 1em 2em;
+      background-color: rgba(0, 0, 0, 0.3);
+      border: none;
       position: relative;
-      overflow: hidden;
       cursor: pointer;
-      z-index: 1;
       font-weight: 300;
       font-size: 17px;
       font-family: 'Roboto', 'Segoe UI', sans-serif;
       text-transform: uppercase;
       color: var(--color);
       margin-bottom: 24px;
-      transition: 0.5s;
+      transition: all 0.4s ease;
     }
 
     .btn::before {
       content: '';
       position: absolute;
-      top: -3px;
-      left: -3px;
-      right: -3px;
-      bottom: -3px;
-      background: linear-gradient(45deg, #ff00ff, #00ffff, #ff00ff, #00ffff);
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      background: linear-gradient(
+        45deg,
+        #ff0000,
+        #ff7300,
+        #fffb00,
+        #48ff00,
+        #00ffd5,
+        #002bff,
+        #7a00ff,
+        #ff00c8,
+        #ff0000
+      );
       background-size: 400%;
       z-index: -1;
-      border-radius: 50px; /* Ensures rounded corners match the button */
-      animation: neon-border 4s linear infinite;
+      animation: rainbow-border 20s linear infinite;
+    }
+
+    .btn::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        45deg,
+        transparent 20%,
+        rgba(255, 215, 0, 0.1) 50%,
+        transparent 80%
+      );
+      opacity: 0;
+      transition: opacity 0.4s ease;
     }
 
     .btn:hover {
-      color: black;
+      background-color: rgba(15, 15, 15, 0.6);
+      box-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
+    }
+
+    .btn:hover::after {
+      opacity: 1;
     }
 
     .btn:active {
-      filter: brightness(0.7);
       transform: scale(0.98);
+      background-color: rgba(255, 215, 0, 0.1);
     }
 
-    @keyframes neon-border {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    @keyframes rainbow-border {
+      0% { background-position: 0 0; }
+      100% { background-position: 400% 0; }
     }
   </style>
 </head>
 <body>
-  <!-- Background video -->
   <video autoplay loop muted>
     <source src="https://i.imgur.com/DSaX6eG.mp4" type="video/mp4">
     Your browser does not support the video tag.
