--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Marisel's Session Site</title>
+  <title>BERA MD SESSION SITE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -103,15 +103,16 @@
 </head>
 <body>
   <video autoplay loop muted>
-    <source src="https://i.imgur.com/DSaX6eG.mp4" type="video/mp4">
+    <source src="https://files.catbox.moe/05t1pj.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
   <button onclick="window.open(`/pair`)" class="btn">Pair</button>
   <button onclick="window.open('https://deploy-fld5.vercel.app/')" class="btn">Bot Features</button>
-  <button onclick="window.open(`https://github.com/betingrich3/Mercedes/fork`)" class="btn">Mercedes</button>
-  <button onclick="window.open(`https://github.com/betingrich/Bugatti/fork`)" class="btn">Bugatti</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029Vajvy2kEwEjwAKP4SI0x`)" class="btn">Support</button>
-  <button onclick="window.open(`https://wa.me//+254740007567`)" class="btn">Chat Marisel</button>
+  <button onclick="window.open(`https://github.com/Berabruce/BERA-MD/fork`)" class="btn">BERA MD</button>
+  <button onclick="window.open(`https://github.com/Berabruce/TREX-MD/fork`)" class="btn">TREX MD</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VajJoCoLI8YePbpsnE3q`)" class="btn">Support</button>
+  <button onclick="window.open(`https://wa.me//+254743982206`)" class="btn">Chat Bera</button>
+  <button onclick="window.open(`https://wa.me//+254740007567`)" class="btn">Session Coder</button>
 </body>
 </html>
