--- a/pair.html
+++ b/pair.html
@@ -40,41 +40,38 @@
       z-index: 1;
     }
 
+    /* Neon Border Box */
     .box {
-      width: 300px;
-      height: 300px;
+      width: 400px;
+      height: 350px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background-color: rgba(0, 0, 0, 0.4);
-      position: relative;
       text-align: center;
+      position: relative;
       overflow: hidden;
+      background: transparent;
     }
 
     .box::before {
       content: '';
       position: absolute;
-      top: -2px;
-      left: -2px;
-      right: -2px;
-      bottom: -2px;
-      background: linear-gradient(
-        45deg,
-        #ff0000,
-        #ff7300,
-        #fffb00,
-        #48ff00,
-        #00ffd5,
-        #002bff,
-        #7a00ff,
-        #ff00c8,
-        #ff0000
-      );
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      border: 5px solid transparent;
+      background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
       background-size: 400%;
-      animation: rainbow-border 20s linear infinite;
+      animation: neon-border 3s linear infinite;
       z-index: -1;
+    }
+
+    @keyframes neon-border {
+      0% { background-position: 0 0; }
+      100% { background-position: 400% 0; }
     }
 
     .input-container {
@@ -110,11 +107,6 @@
       border-radius: 0.8rem;
       transition: all 0.3s ease;
       cursor: pointer;
-    }
-
-    @keyframes rainbow-border {
-      0% { background-position: 0 0; }
-      100% { background-position: 400% 0; }
     }
 
     @media (max-width: 500px) {
