--- a/pair.html
+++ b/pair.html
@@ -14,23 +14,17 @@
       margin: 0;
       overflow: hidden;
       font-family: Arial, sans-serif;
+      background: black;
     }
 
-    /* Background Video */
-    .video-container {
+    #bgVideo {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .video-container video {
-      width: 100%;
-      height: 100%;
       object-fit: cover;
+      z-index: -1;
     }
 
     .container {
@@ -40,38 +34,30 @@
       z-index: 1;
     }
 
-    /* Neon Border Box */
     .box {
-      width: 400px;
-      height: 350px;
+      width: 300px;
+      height: 300px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-      background: transparent;
-    }
-
-    .box::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      background-color: rgba(255, 255, 255, 0.2);
       border-radius: 10px;
-      border: 5px solid transparent;
-      background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-      background-size: 400%;
-      animation: neon-border 3s linear infinite;
-      z-index: -1;
+      position: relative;
+      animation: neonBorder 3s infinite;
+      text-align: center;
     }
 
-    @keyframes neon-border {
-      0% { background-position: 0 0; }
-      100% { background-position: 400% 0; }
+    @keyframes neonBorder {
+      0% { border: 4px solid #ff00ff; box-shadow: 0 0 10px #ff00ff; }
+      25% { border: 4px solid #00ffff; box-shadow: 0 0 10px #00ffff; }
+      50% { border: 4px solid #ff8000; box-shadow: 0 0 10px #ff8000; }
+      75% { border: 4px solid #8000ff; box-shadow: 0 0 10px #8000ff; }
+      100% { border: 4px solid #ff00ff; box-shadow: 0 0 10px #ff00ff; }
+    }
+
+    #text {
+      color: #fff;
     }
 
     .input-container {
@@ -82,31 +68,48 @@
       gap: 0.3rem;
       width: 90%;
       position: relative;
-      margin: 1rem 0;
     }
 
     .input-container input {
       border-radius: 0.8rem;
-      background: rgba(0, 0, 0, 0.3);
+      background: transparent;
       flex-grow: 1;
       padding: 1rem;
       border: 2px solid transparent;
       color: #fff;
-      transition: all 0.3s ease;
-      position: relative;
+      transition: all 0.2s ease-in-out;
+      animation: neonInput 3s infinite;
+    }
+
+    @keyframes neonInput {
+      0% { box-shadow: 0 0 10px #ff00ff; border-color: #ff00ff; }
+      25% { box-shadow: 0 0 10px #00ffff; border-color: #00ffff; }
+      50% { box-shadow: 0 0 10px #ff8000; border-color: #ff8000; }
+      75% { box-shadow: 0 0 10px #8000ff; border-color: #8000ff; }
+      100% { box-shadow: 0 0 10px #ff00ff; border-color: #ff00ff; }
+    }
+
+    .input-container input::placeholder {
+      color: #fff;
+      font-weight: bold;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
     }
 
     .input-container button {
       padding: 1rem;
-      background: linear-gradient(135deg, #ffd700 0%, #daa520 100%);
+      background: linear-gradient(135deg, #8a2be2 0%, #800080 100%);
       font-weight: 900;
       letter-spacing: 0.3rem;
       text-transform: uppercase;
-      color: #000;
+      color: white;
       border: none;
       border-radius: 0.8rem;
-      transition: all 0.3s ease;
-      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .input-container button:hover {
+      background: linear-gradient(135deg, #A8E4A0 0%, #32CD32 100%);
+      color: red;
     }
 
     @media (max-width: 500px) {
@@ -115,34 +118,34 @@
         width: 100%;
       }
 
-      .box {
-        width: 90%;
-        height: auto;
-        padding: 2rem 0;
+      .input-container input {
+        border-radius: 0.8rem;
+      }
+
+      .input-container button {
+        border-radius: 0.8rem;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Background Video -->
-  <div class="video-container">
-    <video autoplay muted loop>
-      <source src="https://files.catbox.moe/05t1pj.mp4" type="video/mp4">
-    </video>
-  </div>
+  <video autoplay muted loop id="bgVideo">
+    <source src="https://files.catbox.moe/16j65t.mp4" type="video/mp4">
+  </video>
 
   <div class="container">
-    <div class="box">
+    <div class="box" id="box">
       <div id="text">
-        <i class="fa fa-user" style="color: #ffd700;"></i>
-        <h3 style="color: #ffd700;">BERA MD PAIR</h3>
+        <i class="fa fa-user"></i>
+        <h3>BERA MD PAIR</h3>
         <h2>Enter Your Number</h2>
-        <h4 style="color: #ffd700;">Marisel Made it</h4>
+        <h4>Marisel Made it</h4>
         <div class="input-container">
-          <input placeholder="254740007567" type="number" id="number">
+          <input placeholder="254740007567" type="number" id="number" name="">
           <button id="submit">Enter</button>
         </div>
         <a id="waiting-message" class="centered-text" style="display: none;">in process...</a>
+        <br><br>
         <main id="pair"></main>
       </div>
     </div>
@@ -153,6 +156,7 @@
     let a = document.getElementById("pair");
     let b = document.getElementById("submit");
     let c = document.getElementById("number");
+    let box = document.getElementById("box");
 
     async function Copy() {
       let text = document.getElementById("copy").innerText;
@@ -160,9 +164,11 @@
       await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
       obj.innerText = "COPIED";
       obj.style = "color:blue;font-weight:bold";
+      obj.size = "5";
       setTimeout(() => {
         obj.innerText = text;
         obj.style = "color:black;font-weight-bold";
+        obj.size = "5";
       }, 500);
     }
 
@@ -193,7 +199,7 @@
         a.innerHTML = '<a style="color:black;font-weight:bold">Please Wait</a><br><br>';
         let { data } = await axios(`/code?number=${bc}`);
         let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
+        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
       }
     });
   </script>
